# open_caffe

./: .gitignore  CMakeLists.txt  gui.qml  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  resources.qrc  ttext.cpp  ttext.h
api/: CMakeLists.txt
api/src/: ttext.cpp
cmake/custom_functions/: add_gtest.cmake  add_library_version_header.cmake  list_subdirs.cmake  overriden.cmake  version.h.in
sdk/: CMakeLists.txt
sdk/apps/: CMakeLists.txt
sdk/apps/gui_qt5/: CMakeLists.txt  InterractiveImage.qml  main.cpp
sdk/apps/gui_qt5/sdk_gui/: ttext.cpp  ttext.h
sdk/apps/headless/: CMakeLists.txt  headless.cpp
sdk/apps/pid_controller_test/: CMakeLists.txt  pid_controller_test.cpp
sdk/cmake/: OpenCaffeSDKConfig.cmake.in  OpenCaffeSDKModules.cmake
sdk/config_files/: config.json  devices.json  devices_BU_WT.json  ntc.cfg
sdk/core/: CMakeLists.txt
sdk/core/include/opencaffe/sdk/core/: base.h  dummy.h  logger.h  mid.h  sequencer.h
sdk/core/include/opencaffe/sdk/core/base/: base.h  common_types.h  communication_layer.h  logger.h
sdk/core/include/opencaffe/sdk/core/mid/: mid.h  mid_mtr.h  mid_send.h
sdk/core/include/opencaffe/sdk/core/mid/mid_send/: mid_mtr.h
sdk/core/lib/: CMakeLists.txt
sdk/core/src/: CMakeLists.txt  base.cpp  sequencer.cpp
sdk/core/src/base/: CMakeLists.txt  logger.cpp
sdk/core/src/mid/: CMakeLists.txt  mid.cpp  mid_mtr.cpp  mid_send.cpp
sdk/core/src/mid/mid_send/: CMakeLists.txt  mid_mtr.cpp
sdk/lib/: CMakeLists.txt
sdk/lib/include/opencaffe/: device_mapping.h  opencaffe.h  sequencer.h
sdk/lib/include/opencaffe/apl/: apl_core.h
sdk/lib/include/opencaffe/base/: base.h  common_types.h  communication_layer.h  logger.h  opencaffeobject.h  tools.h
sdk/lib/include/opencaffe/base/devices/: counterdevice.h  device.h  inputdevice.h  motor.h  outputdevice.h  pid_controller.h  stepper_part.h
sdk/lib/include/opencaffe/mid/: mid_acq.h  mid_core.h  mid_send.h  parts.h
sdk/lib/include/opencaffe/mid/devices/: autocappucinatore.h  door.h  grinder.h  simple_output_device.h
sdk/lib/include/opencaffe/mid/mid_send/: mid_mtr.h
sdk/lib/include/opencaffe/mid/parts/: autocappucinatore.h  brew_unit.h  door.h  drawer.h  flow_meter.h  grinder.h  heater.h  lifter.h  multivalve.h  simple_input_part.h  simple_output_device.h  simple_output_part.h  stepper_part.h  water_ctrl.h  water_pump.h  watertank.h
sdk/lib/src/: CMakeLists.txt  sequencer.cpp
sdk/lib/src/apl/: CMakeLists.txt  apl_core.cpp
sdk/lib/src/base/: CMakeLists.txt  communication_layer.cpp  logger.cpp  mapping.cpp  opencaffeobject.cpp  tools.cpp
sdk/lib/src/base/devices/: CMakeLists.txt  motor.cpp
sdk/lib/src/mid/: CMakeLists.txt  mid_acq.cpp  mid_core.cpp  mid_send.cpp
sdk/lib/src/mid/mid_send/: mid_mtr.cpp
sdk/lib/src/mid/parts/: CMakeLists.txt  brew_unit.cpp  simple_input_part.cpp  simple_output_part.cpp  water_pump.cpp
sdk/modules/: CMakeLists.txt
sdk/modules/base/cpp/: CMakeLists.txt
sdk/modules/base/cpp/include/opencaffe/sdk/: opencaffe.h
sdk/modules/base/cpp/include/opencaffe/sdk/base/: base.h  callobject.h  device_mapping.h  logger.h  opencaffeobject.h
sdk/modules/base/cpp/include/opencaffe/sdk/base/details/: opencaffeobject_impl.h
sdk/modules/base/cpp/lib/: CMakeLists.txt
sdk/modules/base/cpp/src/: CMakeLists.txt  callobject.cpp  logger.cpp  mapping.cpp  opencaffeobject.cpp  soft_version.cpp  tools.cpp
sdk/modules/base/cpp/src/devices/: CMakeLists.txt  analogdevice.cpp  counterdevice.cpp  device.cpp  inputdevice.cpp  motor.cpp  motordevice.cpp  outputdevice.cpp
sdk/modules/base/cpp/src/utils/: CMakeLists.txt  log.cpp  logger.cpp  tools.cpp
sdk/modules/base/cpp/tests/: CMakeLists.txt  analogdevice_gtest.cpp  counterdevice_gtest.cpp  inputdevice_gtest.cpp  outputdevice_gtest.cpp
sdk/modules/base/cpp/tests/devices/: motordevice_gtest.cpp
sdk/modules/core/cpp/: CMakeLists.txt
sdk/modules/core/cpp/apps/: CMakeLists.txt
sdk/modules/core/cpp/apps/config_files/: config.json
sdk/modules/core/cpp/apps/gui_qt5/: CMakeLists.txt  qml.qrc
sdk/modules/core/cpp/apps/headless/: CMakeLists.txt
sdk/modules/core/cpp/apps/opencaffe_gui_qt5_core_sample/: CMakeLists.txt  main.cpp
sdk/modules/core/cpp/apps/opencaffe_headless_core_sample/: CMakeLists.txt  opencaffe_headless_core_sample.cpp  sequencer.cpp  sequencer.h
sdk/modules/core/cpp/apps/opencaffe_pid_controller_sample/: CMakeLists.txt  opencaffe_pid_controller_sample.cpp
sdk/modules/core/cpp/apps/pid_controller_test/: CMakeLists.txt
sdk/modules/core/cpp/include/opencaffe/: opencaffe.h  sequencer.h
sdk/modules/core/cpp/include/opencaffe/apl/: apl_core.h
sdk/modules/core/cpp/include/opencaffe/base/: base.h  common_types.h  opencaffeobject.h  tools.h
sdk/modules/core/cpp/include/opencaffe/base/devices/: analogdevice.h  device.h  inputdevice.h  outputdevice.h  pid_controller.h  stepper_part.h
sdk/modules/core/cpp/include/opencaffe/mid/: mid_core.h  mid_send.h
sdk/modules/core/cpp/include/opencaffe/mid/parts/: autocappucinatore.h  brew_unit.h  flow_meter.h  grinder.h  heater.h  lifter.h  multivalve.h  simple_input_part.h  simple_output_part.h  stepper_part.h  water_ctrl.h
sdk/modules/core/cpp/include/opencaffe/sdk/core/: coreobject.h  icallobject.h  parts.h
sdk/modules/core/cpp/lib/: CMakeLists.txt
sdk/modules/core/cpp/src/: CMakeLists.txt  coreobject.cpp  opencaffeobject.cpp  sequencer.cpp
sdk/modules/core/cpp/src/apl/: CMakeLists.txt  apl_core.cpp
sdk/modules/core/cpp/src/base/: CMakeLists.txt  opencaffeobject.cpp  tools.cpp
sdk/modules/core/cpp/src/base/devices/: CMakeLists.txt  motor.cpp
sdk/modules/core/cpp/src/mid/: CMakeLists.txt  mid_core.cpp  mid_send.cpp
sdk/modules/core/cpp/src/mid/parts/: brew_unit.cpp  simple_input_part.cpp  simple_output_part.cpp
sdk/modules/core/cpp/src/parts/: CMakeLists.txt  brew_unit.cpp  simple_input_part.cpp  simple_output_part.cpp
sdk/modules/core/cpp/tests/: CMakeLists.txt
sdk/modules/core/cpp/tests/parts/: CMakeLists.txt  SimpleInputPart_gtest.cpp  SimpleOutputPart_gtest.cpp
utils/git/hooks/: pre-commit
(+28 files in other folders)
